# camera-beaglebone-black

app/: CMakeLists.txt  README.md  main.cpp
app/ssd1306/: CMakeLists.txt  ssd1306.c  ssd1306.h
app/utils/: utils.h
myapp/: CMakeLists.txt  README.md  main.cpp
myapp/toolchain/: bbb.toolchain.cmake
myapp/utils/: utils.c
poky/meta-kernel/recipes-kernel/linux/: linux-yocto_%.bbappend
poky/meta-kernel/recipes-kernel/linux/linux-yocto/: defconfig
yoctoproject/: README.md
yoctoproject/poky/meta-dt/conf/: layer.conf
yoctoproject/poky/meta-dt/recipes-kernel/linux/: linux-yocto_%.bbappend
yoctoproject/poky/meta-kernel/recipes-kernel/linux/linux-yocto/: 0001-add-ssd1306-i2c1.patch
yoctoproject/poky/meta-myapp/recipes-app/myapp/: myapp.bb
yoctoproject/poky/meta-mykernel/: README
yoctoproject/poky/meta-mykernel/conf/: layer.conf
yoctoproject/poky/meta-mykernel/recipes-kernel/linux/linux-yocto/: 0001-add-ssd1306-i2c1.patch
yoctoproject/poky/meta-mykernel/recipes-kernel/ssd1306-i2c-mod/: ssd1306-i2c-mod_0.1.bb
yoctoproject/poky/meta-mykernel/recipes-kernel/ssd1306-i2c-mod/files/: Makefile  ssd1306-i2c.c
